<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_search_address"
          android:icon="@drawable/ic_menu_search"
          android:title="@string/menu_search_address"
          android:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_location"
          android:icon="@drawable/ic_menu_location"
          android:title="@string/menu_location"
          android:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_infos"
          android:icon="@drawable/ic_menu_help"
          android:title="@string/menu_infos"
          android:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_preferences"
          android:icon="@drawable/ic_menu_settings"
          android:title="@string/menu_preferences"
          android:showAsAction="ifRoom"/>
</menu>