<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:id="@+id/next_blood_event_historic_element_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/next_blood_event_full_blood"
            android:textColor="@color/next_blood_event_subcategory_color"
            android:textAllCaps="true"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/next_blood_event_subcategory_color"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="@dimen/next_blood_event_form_left_width_large"
                android:layout_height="wrap_content"
                android:text="@string/next_blood_event_number_events"
                android:textSize="@dimen/next_blood_event_form_label_font_size"
                android:layout_gravity="center_vertical"/>

        <Spinner
                android:id="@+id/next_blood_event_historic_element_number_events_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/next_blood_event_sexe"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/next_blood_event_historic_element_date_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:visibility="gone">

        <TextView
                android:layout_width="@dimen/next_blood_event_form_left_width_large"
                android:layout_height="wrap_content"
                android:text="@string/next_blood_event_date_last_event"
                android:textSize="@dimen/next_blood_event_form_label_font_size"
                android:layout_gravity="center_vertical"/>

        <Spinner
                android:id="@+id/next_blood_event_full_blood_last_date_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/next_blood_event_sexe"/>
    </LinearLayout>

</LinearLayout>